# persona1-reverse-engineering

./: .gitignore  persona1.xml
game/: adv_execute_event_script.c  adv_textbox_Process.c
scripts/: fix-file-meta.py
scripts/scene-tool/: __main__.py  archive.py  formats.py  message.py  scene.py  script.py
tool/: pyproject.toml
tool/src/p1patch/: cli.py
tool/src/p1patch/common/: constants.py
tool/src/p1patch/event/: archive.py
tool/src/p1patch/font/: font.py
